--- a/.github/.workflows/bankci.yml
+++ b/.github/.workflows/bankci.yml
@@ -1,4 +1,4 @@
-ame: Bank CI
+name: React CI
 
 on:
   push:
@@ -33,3 +33,4 @@ jobs:
         run: npm test --if-present
 
       - name: Build project
+        run: npm run build --if-present
